--- a/html-source/index.html
+++ b/html-source/index.html
@@ -8,21 +8,9 @@
 		<title>My nice page</title>
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-		
-		<style type="text/css">
-			.my-footer {
-				height: 5em;
-				background: #0c699e;
-				margin-top: 1.5em; /*the width of a capital letter M, 1em = base size of a chracter*/
-				padding: 1em;
-				color: #ffffff;
-				font-size: 80%; /*percent of the web content's base font*/
-			}
-
-			p{
-
-			}
-		</style>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
+		<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+		<link rel="stylesheet" type="text/css" href="static/css/styles.css">
 
 	</head>
 
