Refactor to use internal packages

--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -44,7 +44,7 @@
 		       		</ul>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book Now</a>
+		          <a class="nav-link" href="/search-availability" tabindex="-1" aria-disabled="true">Book Now</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
@@ -86,17 +86,6 @@
 
 				</div>
 			</div>
-
-
-			<div class="row">
-				<div class="row">
-					<p id="myParagraph">This is a paragraph.</p>
-					<p>
-						<button id="colorButton" class="btn btn-outline-secondary">Click me</button>
-					</p>
-				</div>
-			</div>
-
 		</div>
 
 		<div class="row my-footer">
