--- a/email-templates/basic.html
+++ b/email-templates/basic.html
@@ -1435,8 +1435,8 @@ body.outlook p {
                             <table>
                               <tr>
                                 <th>
-                                  <h4 class="text-center">Responsive Emails</h4>
-                                  {{/* <p class="text-center">15 sections | 567 Min</p> */}}
+                                  <h4 class="text-center">Fort Smythe</h4>
+                                  
                                 </th>
                                 <th class="expander"></th>
                               </tr>
@@ -1453,21 +1453,10 @@ body.outlook p {
                             <table>
                               <tr>
                                 <th>
-                                  <p class="text-center">Hey you! It's you! Just a heads up, we just added this hot new class that will teach you how to NOT be a lame as a duck. Not the metaphorical lame duck, either, but a real duck that was actually lame, maybe from stepping
-                                    on a land mine or something. Anyways, Foundation for Emails makes coding HTML emails like calling the Navy SEALS to invade a Pre-school, with pre-schoolers, armed with Crayolas.</p>
-                                  <center data-parsed="">
-                                    <table class="button success float-center">
-                                      <tr>
-                                        <td>
-                                          <table>
-                                            <tr>
-                                              <td><a href="#">Get smarter now &rarrtl;</a></td>
-                                            </tr>
-                                          </table>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                  </center>
+                                  <p class="text-center">
+                                    [%body%]
+                                  </p>
+                                  
                                 </th>
                                 <th class="expander"></th>
                               </tr>
@@ -1490,7 +1479,7 @@ body.outlook p {
                                       </tr>
                                     </tbody>
                                   </table>
-                                  <p class="text-center">@copywrite nobody<br> <a href="#">hello@nocopywrite.com</a> | <a href="#">Manage Email Notifications</a> | <a href="#">Unsubscribe</a></p>
+                                  <p class="text-center">Copyright 2021<br> <a href="#">hello@nocopywrite.com</a> | <a href="#">Manage Email Notifications</a> | <a href="#">Unsubscribe</a></p>
                                   <center data-parsed="">
                                     <table align="center" class="menu float-center">
                                       <tr>
